--- a/.github/workflows/docker-standalone.yml
+++ b/.github/workflows/docker-standalone.yml
@@ -21,7 +21,14 @@ jobs:
         BASE_IMAGE: clelange/cc7-cms:latest
         SCRAM_ARCH: slc7_amd64_gcc700
         CMSSW_VERSION: CMSSW_10_2_21
-      run: export DOCKER_IMAGE="treemaker/cmssw" && make CMSSW_VERSION=${{ env.CMSSW_VERSION }} SCRAM_ARCH=${{ env.SCRAM_ARCH }} BASEIMAGE=${{ env.BASE_IMAGE }}
+      run: |
+        pwd
+	ls -alh
+	cd standalone
+	pwd
+	ls -alh
+        export DOCKER_IMAGE="treemaker/cmssw"
+	make CMSSW_VERSION=${{ env.CMSSW_VERSION }} SCRAM_ARCH=${{ env.SCRAM_ARCH }} BASEIMAGE=${{ env.BASE_IMAGE }}
     - name: Explore Docker Images
       run: docker images -a
     - name: Docker Registry Login
